
* Theory "HOL.Finite_Set"
  - Added lemmas.
      card_Domain_le
      card_le_card_if_mem_imp_ex_mem

* Constants "open" and "uniformity" are not handled as class parameters
any longer in generated code: there are hardly any instances with a
reasonable implementation, but a lot of implementations would require
these as (effectively unused) dictionary parameters.
Minor INCOMPATIBILITY.


*** System ***

* Isabelle/Scala operations Build.build(), Build.build_logic() etc.
already include progress.interrupt_handler for the main loop. It is no
longer required as a separate wrapper for command-line tools etc.

* Isabelle/Scala operation Progress.interrupt_handler is now more
specific for different instances of class Progress, with mixins
Progress.Local_Interrupts (for thread interrupts) and
Progress.Global_Interrupts (for thread interrupts and process signals).
The latter is included in class Console_Progress, which is typically
used for a single command-line tool that is directly connected to the
system shell and its signals (e.g. CTRL-C). The default (new Progress)
does not change interrupt handling at all. Subtle INCOMPATIBILITY in
very rare situations.



New in Isabelle2025-1 (December 2025)
-------------------------------------

*** General ***

* A Prover IDE session, e.g. in Isabelle/jEdit or Isabelle/VSCode, is
now able to load markup and messages from the underlying session
database. Example: "isabelle jedit -l HOL src/HOL/Nat.thy" for theory
"HOL.Nat" in session "HOL". This information is read-only: editing
theory sources in the editor will invalidate formal markup, and replace
it by an error message. Output messages depend on system options
"show_results" (default true) and "show_states" (default false),
provided at build-time for the underlying session database.

* Declarations of intro/elim/dest rules for Pure and the Classical
Reasoner (e.g. HOL) are handled more uniformly and efficiently: the